# socials

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: Makefile  api.md  architecture.md  changelog.md  cli.md  conf.py  contributing.md  extraction.md  getting-started.md  index.md  index.rst  installation.rst  make.bat  modules.rst  parsers.md  reference.md  registry.md  socials.rst  urls.md  usage.rst
socials/: __init__.py  cli.py  extractor.py  protocols.py  registry.py  socials.py
tests/: test_extraction.py  test_extractor.py  test_public_api.py  test_registry.py  test_socials.py
