[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "socials"
dynamic = ["version"]
description = "Social Account Detection for Python"
readme = "README.rst"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    { name = "Karl Lorey", email = "git@karllorey.com" }
]
keywords = ["social media", "url extraction", "facebook", "twitter", "linkedin", "github", "instagram", "youtube"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.8",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[project.scripts]
socials = "socials.cli:app"

[project.urls]
Homepage = "https://github.com/lorey/socials"
Documentation = "https://socials.readthedocs.io"
Repository = "https://github.com/lorey/socials"
Changelog = "https://github.com/lorey/socials/blob/main/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "socials/_version.py"
